{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 679,
  "lineage": "629665ca-4d94-db99-a835-e5b994f037a6",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myNic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/nic-worker01",
            "internal_domain_name_suffix": "dxcblqyn3uwevm4gd0cfbp54va.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconf-worker01",
                "primary": true,
                "private_ip_address": "10.0.1.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/pubip-worker01",
                "subnet_id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet"
              }
            ],
            "location": "westeurope",
            "name": "nic-worker01",
            "private_ip_address": "10.0.1.10",
            "private_ip_addresses": [
              "10.0.1.10"
            ],
            "resource_group_name": "kubernetes_rg",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_public_ip.myPublicIp",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mySubnet",
            "azurerm_virtual_network.myNet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/nic-worker02",
            "internal_domain_name_suffix": "dxcblqyn3uwevm4gd0cfbp54va.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconf-worker02",
                "primary": true,
                "private_ip_address": "10.0.1.11",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/pubip-worker02",
                "subnet_id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet"
              }
            ],
            "location": "westeurope",
            "name": "nic-worker02",
            "private_ip_address": "10.0.1.11",
            "private_ip_addresses": [
              "10.0.1.11"
            ],
            "resource_group_name": "kubernetes_rg",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_public_ip.myPublicIp",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mySubnet",
            "azurerm_virtual_network.myNet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/nic-nfs",
            "internal_domain_name_suffix": "dxcblqyn3uwevm4gd0cfbp54va.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconf-nfs",
                "primary": true,
                "private_ip_address": "10.0.1.12",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/pubip-nfs",
                "subnet_id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet"
              }
            ],
            "location": "westeurope",
            "name": "nic-nfs",
            "private_ip_address": "10.0.1.12",
            "private_ip_addresses": [
              "10.0.1.12"
            ],
            "resource_group_name": "kubernetes_rg",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_public_ip.myPublicIp",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mySubnet",
            "azurerm_virtual_network.myNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myNicMaster",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnicMaster",
            "internal_domain_name_suffix": "dxcblqyn3uwevm4gd0cfbp54va.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myipconfigurationMaster",
                "primary": true,
                "private_ip_address": "10.0.1.20",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/vmipMaster",
                "subnet_id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet"
              }
            ],
            "location": "westeurope",
            "name": "vmnicMaster",
            "private_ip_address": "10.0.1.20",
            "private_ip_addresses": [
              "10.0.1.20"
            ],
            "resource_group_name": "kubernetes_rg",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_public_ip.myPublicIpMaster",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mySubnet",
            "azurerm_virtual_network.myNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "mySecGroupAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/nic-worker01|/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtraffic-worker01",
            "network_interface_id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/nic-worker01",
            "network_security_group_id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtraffic-worker01"
          },
          "dependencies": [
            "azurerm_network_interface.myNic",
            "azurerm_network_security_group.mySecGroup",
            "azurerm_public_ip.myPublicIp",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mySubnet",
            "azurerm_virtual_network.myNet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/nic-worker02|/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtraffic-worker02",
            "network_interface_id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/nic-worker02",
            "network_security_group_id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtraffic-worker02"
          },
          "dependencies": [
            "azurerm_network_interface.myNic",
            "azurerm_network_security_group.mySecGroup",
            "azurerm_public_ip.myPublicIp",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mySubnet",
            "azurerm_virtual_network.myNet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/nic-nfs|/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtraffic-nfs",
            "network_interface_id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/nic-nfs",
            "network_security_group_id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtraffic-nfs"
          },
          "dependencies": [
            "azurerm_network_interface.myNic",
            "azurerm_network_security_group.mySecGroup",
            "azurerm_public_ip.myPublicIp",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mySubnet",
            "azurerm_virtual_network.myNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "mySecGroupAssociationMaster",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnicMaster|/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtrafficMaster",
            "network_interface_id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnicMaster",
            "network_security_group_id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtrafficMaster"
          },
          "dependencies": [
            "azurerm_network_interface.myNicMaster",
            "azurerm_network_security_group.mySecGroupMaster",
            "azurerm_public_ip.myPublicIpMaster",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mySubnet",
            "azurerm_virtual_network.myNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mySecGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtraffic-worker01",
            "location": "westeurope",
            "name": "sshtraffic-worker01",
            "resource_group_name": "kubernetes_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "CP2"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtraffic-worker02",
            "location": "westeurope",
            "name": "sshtraffic-worker02",
            "resource_group_name": "kubernetes_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "CP2"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtraffic-nfs",
            "location": "westeurope",
            "name": "sshtraffic-nfs",
            "resource_group_name": "kubernetes_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "CP2"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mySecGroupMaster",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtrafficMaster",
            "location": "westeurope",
            "name": "sshtrafficMaster",
            "resource_group_name": "kubernetes_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "CP2"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myPublicIp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/pubip-worker01",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pubip-worker01",
            "resource_group_name": "kubernetes_rg",
            "sku": "Basic",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/pubip-worker02",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pubip-worker02",
            "resource_group_name": "kubernetes_rg",
            "sku": "Basic",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/pubip-nfs",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pubip-nfs",
            "resource_group_name": "kubernetes_rg",
            "sku": "Basic",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myPublicIpMaster",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/vmipMaster",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "vmipMaster",
            "resource_group_name": "kubernetes_rg",
            "sku": "Basic",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mySubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet",
            "name": "terraformsubnet",
            "resource_group_name": "kubernetes_rg",
            "virtual_network_name": "kubernetesnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.myNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mySubnetMaster",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet",
            "name": "terraformsubnet",
            "resource_group_name": "kubernetes_rg",
            "virtual_network_name": "kubernetesnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.myNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myNet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "c315c41d-ed0d-4a2c-b3c6-1e8450bffea8",
            "id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet",
            "location": "westeurope",
            "name": "kubernetesnet",
            "resource_group_name": "kubernetes_rg",
            "tags": {
              "environment": "CP2"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myNetMaster",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "741c2fa4-fdcc-4370-92dc-dd25c56a4741",
            "id": "/subscriptions/ec98687b-8da7-4660-a9cb-ab62d80dcd52/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnetMaster",
            "location": "westeurope",
            "name": "kubernetesnetMaster",
            "resource_group_name": "kubernetes_rg",
            "tags": {
              "environment": "CP2"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}